--- a/src/DotNetAtlas.Api/appsettings.json
+++ b/src/DotNetAtlas.Api/appsettings.json
@@ -17,10 +17,6 @@
   "DataEndpoint": {
     "DefaultConnectionStringRef": "Weather"
   },
-  "ConnectionStrings": {
-    "Weather": "Data Source=127.0.0.1,12345;Initial Catalog=Weather;Persist Security Info=False;User ID=sa;Password=breK3k3$;Encrypt=True;TrustServerCertificate=True",
-    "Redis": "localhost:12346,defaultDatabase=0,allowAdmin=true,connectTimeout=2000,syncTimeout=2000,abortConnect=true"
-  },
   "Authentication": {
     "JwtBearer": {
       "Authority": "http://localhost:9011",
@@ -34,6 +30,28 @@
         "ValidateLifetime": true
       },
       "RequireHttpsMetadata": false
+    },
+    "OAuth": {
+      "Authority": "http://localhost:9011",
+      "ClientId": "e9fdb985-9173-4e01-9d73-ac2d60d1dc8e",
+      "ClientSecret": "super-secret-secret-that-should-be-regenerated-for-production",
+      "ResponseType": "code",
+      "RequireHttpsMetadata": false
+    },
+    "Oidc": {
+      "Authority": "http://localhost:9011",
+      "ClientId": "e9fdb985-9173-4e01-9d73-ac2d60d1dc8e",
+      "ClientSecret": "super-secret-secret-that-should-be-regenerated-for-production",
+      "ResponseType": "code",
+      "RequireHttpsMetadata": false,
+      "SaveTokens": true,
+      "UsePkce": true,
+      "SignedOutRedirectUri": "http://localhost:5159/"
+    },
+    "Cookie": {
+      "SlidingExpiration": true,
+      "LoginPath": "/api/v1/auth/login",
+      "LogoutPath": "/api/v1/auth/logout"
     }
   },
   "Swagger": {
@@ -41,6 +59,7 @@
       "Title": "DotNetAtlas",
       "Description": "DotNet Atlas - Made with ❤️, Powered by ☕",
       "Version": "v1",
+      "ServerUrl": "http://localhost:5159",
       "Contact": {
         "Name": "David Capcuch",
         "Url": "",
@@ -50,13 +69,6 @@
         "Name": "All rights reserved",
         "Url": ""
       }
-    },
-    "OAuthConfig": {
-      "Authority": "http://localhost:9011",
-      "ClientId": "e9fdb985-9173-4e01-9d73-ac2d60d1dc8e",
-      "ClientSecret": "super-secret-secret-that-should-be-regenerated-for-production",
-      "ResponseType": "code",
-      "RequireHttpsMetadata": false
     }
   },
   "Cors": {
