--- a/src/DotNetAtlas.Api/DotNetAtlas.Api.csproj
+++ b/src/DotNetAtlas.Api/DotNetAtlas.Api.csproj
@@ -21,6 +21,7 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="TypedSignalR.Client.DevTools"/>
 
         <PackageReference Include="StyleCop.Analyzers">
             <PrivateAssets>all</PrivateAssets>
