--- a/src/DotNetAtlas.Api/Properties/launchSettings.json
+++ b/src/DotNetAtlas.Api/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7095;http://localhost:5159",
+      "applicationUrl": "https://dotnetatlas.dev.localhost:7095",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Local"
       }
